fix(policy): 修复 extractSourceVersions 方法 Iterator 转 Stream